# selfTaught

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  backupTRK.sh  readme  usb.c
c/: b_sem.c  bio_pair.c  db.c  infinite.c  named_semaphore.c  thread_pool.c  usb.c  xmacro.c
c++/: parallelo_world.cpp
c++/playcode/: timer.cpp
c++/serializer/: main.cpp  test_struct.cpp  test_struct.h
c/bitstring/: bitstring.c  bitstring.h  main.c
c/ch8/: ch8_Dc_include.c  ch8_Dc_main.c
c/heatmap/: .gitignore  colors.c  colors.h  heatmap  heatmap.c  how.txt  makefile
c/ncurses/: windows.c
c/shm/: Makefile  consumer.c  generator.c
cpp/: compile_time_branch_deletion.cpp  consts.cpp  fisr.cpp  makefile  parallel_string_join.cpp  parallelo_world.cpp  return_codes.cpp  two_sum.cpp
cpp/serializer/: serialization.h
cuda/: Makefile  notes.cu  test.cu
cuda/cmake/: CMakeLists.txt  grid_stride.cu  grid_stride.py  idk.h  indexing.cu  multiple_streams.cu  small_transfers.cu  test.cu
cuda/pycuda/: grid_stride.py
cuda/tools/: gpu_limits.py
euler/c/: a.out  problem1.c  problem10.c  problem12.c  problem14.c  problem2.c  problem3.c  (+5 more)
file_passing/: CMakeLists.txt  README.md  consumer  consumer.c  producer.c
opencv/: CMakeLists.txt  sample1.cpp
python/: binary_to_uint.py  ceasar_cipher_decoder.py  ex1.py  ex13custom.py  ex20.py  ex21.py  ex24.py  ex32.py  ex33.py  ex36.py  ex37.py  ex39.py  ex3copy.py  ex44.py  ex8.py  matplotlib_test.py  oop_test.py  pyrt  sqlite3_test.py  testAssert.py  two_sum.py
rc/: 10-monitor.conf  Xresources  bashrc  conkyrc  rc.lua  smb.conf  vimrc  xinitrc
return_code/: CMakeLists.txt  return.cpp  return.h  test_rc.cpp  test_rc_only_int.cpp
scripts/: 121slides.sh  221slides.sh  307slides.sh  archive backup.bat  checksum.sh  kbd_illum.sh  kbdillum.sh  performance_level.sh  updateContacts.sh  updateRadarJPG.sh
(+69 files in other folders)
